--- a/index.html
+++ b/index.html
@@ -103,8 +103,77 @@
                 </a>
                 <a href="#mainSlider" class="carousel-control-next" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
+                    <span class="sr-only">Next</span>
                 </a>
+            </div>
+            <!-- Sobre a Empresa -->
+            <div id="about-area">
+                <div class="container"> <!--Extrutura do bootstrap limita a area-->
+                    <div class="row"><!--Linhas do bootstrap-->
+                        <div class="col-12"><!--Grid de 12 colunas-->
+                            <h3 class="main-title">Sobre a HDC Agency</h3>
+                             
+                        </div>
+                        <div class="col-md-6"><!--O conteúdo se adpta ao container do bootstrap-->
+                            <img class="img-fluid" src="img/agencia.jpg" alt="Agência HDC">
+                            
+                        </div><!--Ele respeita a largura até determinada largura da tela-->
+                        <div class="col-md-6">
+                            <h3 class="about-title">Uma agência que pensa no Futuro!</h3>
+                            <p>It is a long established fact that a reader ion of letters.</p>
+                            <p> Many desktop publishing packages and web page editors now use Lorem Ipsum.</p> 
+                            <p> Various versions have evolved over the years, sometimes. </p> 
+                            <p> By accident, sometimes on purpose (injected humour and the like).</p>
+                            <ul id="about-list">
+                                <li><i class="fas fa-check"></i>Utilização de Machine Learning</li>    
+                                <li><i class="fas fa-check"></i>Loyout reponsivel par todos os dispositivos</li>    
+                                <li><i class="fas fa-check"></i>Integração com diverços sistemas do mercado</li>    
+                                <li><i class="fas fa-check"></i>Sistema de pagamento próprio</li>    
+                                <li><i class="fas fa-check"></i>Desenvolvimento com metodologia ágil</li>    
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Serviços da empresa -->
+            <div id="services-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="main-title">Nossas Especialidades</h3>
+                        </div>
+                        <div class="col-md-4 service-box">
+                            <i class="fas fa-mobile-alt"></i><!-- Para mobile -->
+                            <h4>Aplicativos Nativos</h4>
+                            <p>Utilizamos o real poder dos dispositivos móveis construindo aplicativos nativos.</p>
+                        </div>
+                        <div class="col-md-4 service-box">
+                            <i class="fas fa-shopping-cart"></i><!-- Para E-Commerce -->
+                            <h4>E-commerces</h4>
+                            <p>Temos uma plataforma propria de e-commerce que se adapta a qualquer regra de negócio (B2C e B2B). </p>
+                        </div>
+                        <div class="col-md-4 service-box">
+                            <i class="fas fa-paint-brush"></i><!-- Para Design -->
+                            <h4>Design Criativo</h4>
+                            <p>Nossos desinners são especializados em UI/UX e também possuem vasta experiência no mercado de software.</p>
+                        </div>
+                        <div class="col-md-4 service-box">
+                            <i class="fab fa-google"></i><!-- Para mobile -->
+                            <h4>Experts em SEO</h4>
+                            <p>Nosso serviços de marketing possibilita maior visibilidade de seu site porporcionando um maior numero de venda.</p>
+                        </div>
+                        <div class="col-md-4 service-box">
+                            <i class="fas fa-hands-helping"></i><!-- Para mobile -->
+                            <h4>Supporte 24/7</h4>
+                            <p>Você sempre tera alguem da equipe disponível para suporte, em diferentes plataforma, (chat, email, slack, zoom)</p>
+                        </div>
+                        <div class="col-md-4 service-box">
+                            <i class="fas fa-server"></i><!-- Para mobile -->
+                            <h4>Experiência em servidores</h4>
+                            <p>Garantimos uptime e também rápido tempo de resposta do seu site para o seu cliente.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
