--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- header e nav -->
     <header>
         <div class="container" id="nav-container">
-            <nav class="navbar navbar-expand-lg fixed-top"> <!--fixed-top: fixa a barra de navegação no topo-->
+            <nav class="navbar navbar-expand-lg fixed-top navbar-dark"> <!--fixed-top: fixa a barra de navegação no topo-->
                 <a href="#" class="navbar-brand"><!--Classe usada para logo-->
                     <img id="logo" src="img/hdcagency_logo.svg" alt="HDC Agency"> HDC Agency
                 </a>
@@ -293,8 +293,76 @@
                     </div>
                 </div>
             </div>
+            <!-- Newletter -->
+            <div id="news-area">
+                <div class="container">
+                    <div class="col-md-12">
+                        <h3 class="main-title">Fique por dentro das novidades</h3>
+                    </div>
+                    <p>Assine nossa lista de e-mail, e receba nossos conteúdos sobre desenvolvimento de software.</p>
+                    <form action="">
+                        <input type="email" class="form-control" id="email-input" name="email" placeholder="Seu melhor Email">
+                        <input type="submit" id="news-btn" value="Inscrever">
+                    </form>
+                </div>
+            </div>
+            <!-- Call to action -->
+            <div id="call-area">
+                <div class="container">
+                    <div class="row">
+                        <p>Deseja fazer um orçamento sem compromisso</p>
+                        <button class="main-btn" id="call-btn">Orçar</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+    <!-- Rodapé -->
+    <footer>
+        <div id="contact-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="main-title">Entre em contato conosco</h3>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-phone"></i> <!--icones-->
+                        <p><span class="contact-title">Ligue para:</span>(64)98752-9874</p>
+                        <p><span class="contact-title">Horários:</span>8:00 - 19:00</p>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-envelope"></i>
+                        <p><span class="contact-title">Envie um e-mail:</span>contado@hdcagency.com</p>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p><span class="contact-title">Venha tomar um café:</span>Rua Lorem Ipsum - 1314</p>
+                    </div>
+                    <div class="col-md-6" id="msg-box">
+                        <p>Ou nos deixe uma mensagem:</p>
+                    </div>
+                    <div class="col-md-6" id="contact-form">
+                        <form action="">
+                            <input type="email" class="form-control" placeholder="E-mail" name="email">
+                            <input type="text" class="form-control" placeholder="Assunto" name="subject">
+                            <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message"></textarea>
+                            <input type="submit" class="main-btn" value="Enviar">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="copy-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Desenvolvido por <a href="https://google.com.br" target="_black">Nelcione HDC</a> &copy; | 2021</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Scrips do projeto -->
     <script src="js/scripts.js"></script>
 </body>
 </html>
