--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
                     <div class="carousel-item active">
                         <img src="img/banner1.png" class="d-block w-100" alt="Projetos de e-commerce"> <!--d-block w-100: deixa largura 100% -->
                     <!-- textos do slide -->
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-                            <p>Integer interdum laoreet est vulputate placerat. In id sagittis sapien. Maecenas eget interdum eros, a aliquet mauris.</p>
+                        <div class="carousel-caption d-md-block">
+                            <h2>Lorem ipsum dolor sit amet.</h2>
+                            <p>Integer interdum laoreet est.</p>
                             <a href="" class="main-btn">Ver portfólio</a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner3.png" class="d-block w-100" alt="Manutenção em Software"> <!--d-block w-100: deixa largura 100% -->
                     <!-- textos do slide -->
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Fusce viverra porta purus sed vulputate</h2>
-                            <p>Vestibulum non consectetur ligula, vel dignissim enim</p>
+                        <div class="carousel-caption d-md-block">
+                            <h2>Fusce viverra porta.</h2>
+                            <p>Vestibulum non consectetur.</p>
                             <a href="" class="main-btn">Entre em contato</a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner2.png" class="d-block w-100" alt="Engenharia de Software"> <!--d-block w-100: deixa largura 100% -->
                     <!-- textos do slide -->
-                        <div class="carousel-caption d-none d-md-block">
-                            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry?</h2>
-                            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                        <div class="carousel-caption d-md-block">
+                            <h2>Lorem Ipsum is simply dummy?</h2>
+                            <p>Lorem Ipsum has been the.</p>
                             <a href="" class="main-btn">Entre em contato</a>
                         </div>
                     </div>
